# jflcstd

./: .gitignore  README.md  jflcstd.c  jflcstd.h  jflcstd_test.c  meson.build
include/: jflcstd.h  macros.h  stack.h
src/: jflcstd.c  stack.c
test/: jflcstd_test.c  stack_test.c
